# PROG

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: builtins.prog  fibonacci.prog  fizzbuzz.prog  functions.prog  hello.prog  lists.prog
src/prog/: __init__.py  __main__.py  interpreter.py  lexer.py  parser.py
tests/: __init__.py  test_interpreter.py  test_lexer.py  test_main.py  test_parser.py
