[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prog-lang"
version = "0.1.0"
description = "PROG — a simple, open-source programming language for AI model training"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
  {name = "lg-maxxa", email = "lg-maxxa@users.noreply.github.com"},
]
keywords = ["programming-language", "interpreter", "ai", "machine-learning", "training-data"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Interpreters",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/lg-maxxa/PROG"
Repository = "https://github.com/lg-maxxa/PROG"
Issues = "https://github.com/lg-maxxa/PROG/issues"

[project.scripts]
prog = "prog.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
